# fta

./: .gitignore  AGENTS.md  CHANGELOG.md  Cargo.toml  LICENSE.md  MAINTENANCE.md  README.md  VisitMethods.md  package.json  test_changelog_extraction.sh
.cargo/: config.toml
.github/: dependabot.yml  foo.ts  verdaccio-config.yml
.github/workflows/: CI.md  CI.yml  build.yml  dependabot.yml  publish-dry-run-nix.yml  publish-dry-run-windows.yml  publish-dry-run.yml  release.yml  test.yml
crates/fta/: Cargo.toml
crates/fta-wasm/: Cargo.toml  README.md
crates/fta-wasm/src/: lib.rs  lib_tests.rs
crates/fta/src/: complexity.rs  complexity_tests.rs  config.rs  config_tests.rs  halstead.rs  lib.rs  main.rs  parse_module.rs  parse_module_tests.rs  structs.rs
crates/fta/src/config/: integration_tests.rs  mod.rs  tests.rs
crates/fta/src/cyclo/: mod.rs  tests.rs
crates/fta/src/halstead/: mod.rs  tests.rs
crates/fta/src/output/: mod.rs  tests.rs
crates/fta/src/parse/: mod.rs  tests.rs
crates/fta/src/structs/: mod.rs
crates/fta/src/utils/: mod.rs  tests.rs
crates/fta/src/walk/: mod.rs
crates/fta_wasm/: Cargo.toml
crates/fta_wasm/src/: lib.rs  lib_tests.rs
src/: alpha.rs  complexity.rs  halstead.rs  main.rs  tokenize.rs
