[package]
name = "fta-wasm"
version = "3.0.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Fast TypeScript Analyzer"
homepage = "https://ftaproject.dev"
documentation = "https://github.com/sgb-io/fta"
repository = "https://github.com/sgb-io/fta"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
fta = { path = "../fta", default-features = false }
serde_json = "1.0.145"
wasm-bindgen = "0.2.101"