[package]
name = "fta"
version = "2.0.1"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Fast TypeScript Analyzer"
homepage = "https://ftaproject.dev"
documentation = "https://github.com/sgb-io/fta"
repository = "https://github.com/sgb-io/fta"
readme = "../../README.md"

[dependencies]
clap = { version = "4.5.31", features = ["derive"] }
comfy-table = { version = "7.1.4", optional = true }
env_logger = "0.11"
globset = "0.4"
ignore = "0.4"
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
swc_common = "0.31.12"
swc_ecma_ast = "0.106.0"
swc_ecma_parser = "0.136.0"
swc_ecma_visit = "0.92.0"
tempfile = "3.18.0"

[features]
default = ["use_output"]
use_output = ["comfy-table"]