[package]
name = "fta"
version = "3.0.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Fast TypeScript Analyzer"
homepage = "https://ftaproject.dev"
documentation = "https://github.com/sgb-io/fta"
repository = "https://github.com/sgb-io/fta"
readme = "../../README.md"

[dependencies]
clap = { version = "4.5.57", features = ["derive"] }
comfy-table = { version = "7.2.2", optional = true }
env_logger = "0.11"
globset = "0.4"
ignore = "0.4"
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
swc_common = "14.0.1"
swc_ecma_ast = "14.0.0"
swc_ecma_parser = "21.0.1"
swc_ecma_visit = "14.0.0"
tempfile = "3.25.0"

[features]
default = ["use_output"]
use_output = ["comfy-table"]